sửa lại giao diện thêm cột số thứ tự kiểm tra trùng tên nhà sản xuất khi tạo mới tăng lượng tồn kho khi nhập, giảm khi xoá

--- a/WebPhongKhamNhi/Views/DichVuKham/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuKham/Delete.cshtml
@@ -8,7 +8,6 @@
 
 <h3>Bạn chắc chắn muốn xoá dịch vụ này ??</h3>
 <div>
-    <h4>Dichvukham</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,7 +26,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="MaDichVu" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Trở lại</a>
+        <input type="submit" value="Xoá" class="btn btn-danger" /> |
+        <a asp-action="Index">Quay lại</a>
     </form>
 </div>
