--- a/WebPhongKhamNhi/Views/DichVuKham/Details.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuKham/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Chi tiết phiếu khám</h1>
+<h1>Chi tiết dịch vụ khám</h1>
 
 <div>
-    <h4>Dịch vụ khám</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -26,5 +25,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.MaDichVu">Sửa</a> |
-    <a asp-action="Index">Trở lại</a>
+    <a asp-action="Index">Quay lại</a>
 </div>
