--- a/WebPhongKhamNhi/Views/DichVuKham/Create.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuKham/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Thêm mới dịch vụ khám</h1>
 
-<h4>Dichvukham</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,14 +22,14 @@
                 <span asp-validation-for="ChiPhi" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Thêm" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Quay lại</a>
 </div>
 
 @section Scripts {
