--- a/WebPhongKhamNhi/Views/DichVuKham/Index.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuKham/Index.cshtml
@@ -3,12 +3,13 @@
 @{
     ViewData["Title"] = "Index";
 }
+<h1>Danh sách dịch vụ khám</h1>
+
+<p>Tìm kiếm theo tên dịch vụ</p>
 <form asp-action="Index" method="POST">
     <input type="text" name="textSearch" />
     <input type="submit" value="Tìm kiếm" />
 </form>
-
-<h1>DANH SÁCH DỊCH VỤ KHÁM</h1>
 
 <p>
     <a asp-action="Create">Thêm mới</a>
@@ -16,6 +17,7 @@
 <table class="table">
     <thead>
         <tr>
+            <th>STT</th>
             <th>
                 @Html.DisplayNameFor(model => model.TenDichVu)
             </th>
@@ -26,20 +28,24 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TenDichVu)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ChiPhi)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MaDichVu">Sửa</a> |
-                <a asp-action="Details" asp-route-id="@item.MaDichVu">Chi Tiết</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaDichVu">Xoá</a>
-            </td>
-        </tr>
-}
+        @{ int i = 1;}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@i</td>
+                @{ i++;}
+                <td>
+                    @Html.DisplayFor(modelItem => item.TenDichVu)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ChiPhi)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.MaDichVu">Sửa</a> |
+                    <a asp-action="Details" asp-route-id="@item.MaDichVu">Chi Tiết</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MaDichVu">Xoá</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
