--- a/WebPhongKhamNhi/Views/NhaSanXuat/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/NhaSanXuat/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Xoá thông tin nhà sản xuất</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn chắc chắn muốn xoá nhà sản xuất này?</h3>
 <div>
-    <h4>Nhasanxuat</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -39,7 +38,7 @@
     
     <form asp-action="DeletePost">
         <input type="hidden" asp-for="MaNhaSanXuat" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xoá" class="btn btn-danger" /> |
+        <a asp-action="Index">Quay lại</a>
     </form>
 </div>
