--- a/WebPhongKhamNhi/Views/PhieuDangKyKham/Create.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuDangKyKham/Create.cshtml
@@ -17,7 +17,7 @@
                 <span asp-validation-for="NgayDangKy" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaBenhNhan" class="control-label"></label>
+                <label for="MaBenhNhan" class="control-label">Tên bệnh nhân</label>
                 @Html.DropDownList("MaBenhNhan",
             new SelectList(ViewBag.listBenhNhan, "MaBenhNhan", "HoTen"),
             "--Chọn bệnh nhân--", new { @class = "form-control" })
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Trở lại</a>
+    <a asp-action="Index">Quay lại</a>
 </div>
 
 @section Scripts {
@@ -68,6 +68,7 @@
                     $('#TongTien').val(response.chiPhi)
                 }
                 else {
+                    alert('dữ liệu select ')
                 }
             }).fail(function (response) {
                 alert('ajax call failed')
