--- a/WebPhongKhamNhi/Views/PhieuDangKyKham/CreateByIdBenhNhan.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuDangKyKham/CreateByIdBenhNhan.cshtml
@@ -17,9 +17,9 @@
                 <span asp-validation-for="NgayDangKy" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaBenhNhan" class="control-label"></label>
-                <select asp-for="MaBenhNhan" class="form-control"
-                        asp-items="@(new SelectList(ViewBag.MaBenhNhan, nameof(Benhnhan.MaBenhNhan), nameof(Benhnhan.HoTen))) "></select>
+                <label asp-for="MaBenhNhan" class="control-label">Tên bệnh nhân</label>
+                <input type="text" id="MaBenhNhan" name="MaBenhNhan" readonly 
+                       value="@ViewBag.MaBenhNhan.HoTen" class="form-control"/>
                 <input id="idBn" type="hidden" value="@ViewBag.id" />
             </div>
             <div class="form-group">
@@ -53,9 +53,7 @@
         var today = new Date();
         today.setMinutes(today.getMinutes() - today.getTimezoneOffset());
         $('#NgayDangKy').val(today.toISOString().slice(0, 16));
-        //load select 
-        var idBn = $('#idBn').val();
-        $('#MaBenhNhan').val(idBn);
+        
 
         //event dropdownlist dịch vụ thay đổi
         $('#MaDichVu').change(function () {
