--- a/WebPhongKhamNhi/Views/PhieuDangKyKham/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuDangKyKham/Delete.cshtml
@@ -10,35 +10,41 @@
 <div>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MaPhieuDangKy)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MaPhieuDangKy)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NgayDangKy)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NgayDangKy)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TongTien)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TongTien)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MaBenhNhanNavigation.HoTen)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MaBenhNhanNavigation.HoTen)
-        </dd class>
-        <dt class = "col-sm-2">
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MaDichVuNavigation.TenDichVu)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MaDichVuNavigation.TenDichVu)
-        </dd class>
+        </dd>
     </dl>
     
     <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="MaPhieuDangKy" />
         <input type="submit" value="Xoá" class="btn btn-danger" /> |
-        <a asp-action="Index">Trở lại</a>
+        <a asp-action="Index">Quay lại</a>
     </form>
 </div>
