--- a/WebPhongKhamNhi/Views/PhieuDangKyKham/DetailsByIDBenhNhan.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuDangKyKham/DetailsByIDBenhNhan.cshtml
@@ -10,6 +10,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MaPhieuDangKy)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MaPhieuDangKy)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NgayDangKy)
         </dt>
         <dd class="col-sm-10">
@@ -37,5 +43,5 @@
 </div>
 <div>
     <a asp-action="EditByIDBenhNhan" asp-route-id="@Model.MaPhieuDangKy">Sửa</a> |
-    <a href="@Url.Action("GetByIDBenhNhan", "PhieuDangKyKham", new {id=Model.MaBenhNhan})">Trở lại</a>
+    <a href="@Url.Action("GetByIDBenhNhan", "PhieuDangKyKham", new {id=Model.MaBenhNhan})">Quay lại</a>
 </div>
