--- a/WebPhongKhamNhi/Views/PhieuDangKyKham/EditByIDBenhNhan.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuDangKyKham/EditByIDBenhNhan.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="NgayDangKy" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaBenhNhan" class="control-label"></label>
-                <select asp-for="MaBenhNhan" class="form-control"
-                        asp-items="@(new SelectList(ViewBag.MaBenhNhan, nameof(Benhnhan.MaBenhNhan), nameof(Benhnhan.HoTen)))"></select>
+                <label asp-for="MaBenhNhan" class="control-label">Tên bệnh nhân</label>
+                <input type="text" value="@ViewBag.MaBenhNhan.HoTen" 
+                       readonly id="MaBenhNhan" name="MaBenhNhan" class="form-control"/>
                 <span asp-validation-for="MaBenhNhan" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -42,7 +42,7 @@
 </div>
 
 <div>
-    <a href="@Url.Action("GetByIDBenhNhan", "PhieuDangKyKham", new {id=Model.MaBenhNhan})">Trở lại</a>
+    <a href="@Url.Action("GetByIDBenhNhan", "PhieuDangKyKham", new {id=Model.MaBenhNhan})">Quay lại</a>
 </div>
 
 @section Scripts {
