--- a/WebPhongKhamNhi/Views/PhieuNhapThuoc/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuNhapThuoc/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Xoá phiếu nhập</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn chắc chắn muốn xoá phiếu nhập này?</h3>
 <div>
-    <h4>Phieunhap</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -24,16 +23,16 @@
             @Html.DisplayFor(model => model.TongTien)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MaNhaSanXuatNavigation)
+            @Html.DisplayNameFor(model => model.MaNhaSanXuatNavigation.TenNhaSanXuat)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MaNhaSanXuatNavigation.SoDienThoai)
+            @Html.DisplayFor(model => model.MaNhaSanXuatNavigation.TenNhaSanXuat)
         </dd class>
     </dl>
     
     <form asp-action="DeletePost">
         <input type="hidden" asp-for="MaPhieuNhap" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xoá" class="btn btn-danger" /> |
+        <a asp-action="Index">Quay lại</a>
     </form>
 </div>
