--- a/WebPhongKhamNhi/Views/PhieuNhapThuoc/Details.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuNhapThuoc/Details.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h3>THÔNG TIN PHIẾU NHẬP THUỐC</h3>
+<h3>Thông tin phiếu nhập thuốc</h3>
 
 <div>
     <dl class="row">
@@ -32,6 +32,6 @@
 </div>
 <partial name="_BangChiTietPhieuNhap" model="ViewBag.listChiTietPhieuNhap" />
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.MaPhieuNhap">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.MaPhieuNhap">Sửa</a> |
+    <a asp-action="Index">Quay lại</a>
 </div>
