--- a/WebPhongKhamNhi/Views/HoSoKham/EditHoSoTheoBenhNhan.cshtml
+++ b/WebPhongKhamNhi/Views/HoSoKham/EditHoSoTheoBenhNhan.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "EditHoSoTheoBenhNhan";
 }
 
-<h1>EditHoSoTheoBenhNhan</h1>
+<h1>Chỉnh sửa thông tin hồ sơ bệnh nhân</h1>
 
-<h4>Hosokham</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,14 +33,14 @@
 
            
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Lưu" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="GetHoSoTheoBenhNhan" asp-route-id="@Model.MaBenhNhan">Back to List</a>
+    <a asp-action="GetHoSoTheoBenhNhan" asp-route-id="@Model.MaBenhNhan">Quay lại danh sách hồ sơ</a>
 </div>
 
 @section Scripts {
