--- a/WebPhongKhamNhi/Views/BenhNhan/Create.cshtml
+++ b/WebPhongKhamNhi/Views/BenhNhan/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Thêm mới bệnh nhân</h1>
 
-<h4>Benhnhan</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -56,14 +56,14 @@
                 <span asp-validation-for="LoaiTaiKhoan" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Thêm mới" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Quay lại danh sách bệnh nhân</a>
 </div>
 
 @section Scripts {
