--- a/WebPhongKhamNhi/Views/HoSoKham/CreateHoSoTheoBenhNhan.cshtml
+++ b/WebPhongKhamNhi/Views/HoSoKham/CreateHoSoTheoBenhNhan.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "CreateHoSoTheoBenhNhan";
 }
 
-<h1>CreateHoSoTheoBenhNhan</h1>
+<h1>Thêm mới hồ sơ khám</h1>
 
-<h4>Hosokham</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -37,14 +37,14 @@
                 
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Thêm mới" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="GetHoSoTheoBenhNhan" asp-route-id="@ViewBag.MaBenhNhan">Back to List</a>
+    <a asp-action="GetHoSoTheoBenhNhan" asp-route-id="@ViewBag.MaBenhNhan">Quay lại danh sách hồ sơ của bệnh nhân</a>
 </div>
 
 @section Scripts {
