--- a/WebPhongKhamNhi/Views/HoSoKham/DetailsHoSo.cshtml
+++ b/WebPhongKhamNhi/Views/HoSoKham/DetailsHoSo.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Chi tiết hồ sơ khám</h1>
 
 <div>
-    <h4>Hosokham</h4>
+    
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -50,6 +50,6 @@
     </form>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.MaHoSo">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.MaHoSo">Cập nhật</a> |
     <a asp-action="Index" asp-route-id="@Model.MaBenhNhan">Quay lại danh sách hồ sơ</a>
 </div>
