--- a/WebPhongKhamNhi/Views/HoaDonThuoc/CreateCTHDT.cshtml
+++ b/WebPhongKhamNhi/Views/HoaDonThuoc/CreateCTHDT.cshtml
@@ -39,7 +39,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Details" asp-route-id="@ViewBag.MaHoaDonThuoc">Quay lại chi tiết hóa đơn thuốc</a>
 </div>
 
 @section Scripts {
