--- a/WebPhongKhamNhi/Views/HoaDonThuoc/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/HoaDonThuoc/Delete.cshtml
@@ -4,31 +4,32 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Xóa</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có chắc chắn xóa hóa đơn thuốc này không?</h3>
 <div>
-    <h4>Hoadonthuoc</h4>
+
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NgayThanhToan)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NgayThanhToan)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TongTien)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TongTien)
         </dd>
-        
+
     </dl>
-    
+
     <form asp-action="DeletePost">
         <input type="hidden" asp-for="MaHoaDon" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" />
+
     </form>
+    <a asp-action="Index">Quay lại danh sách hóa đơn thuốc</a>
 </div>
