--- a/WebPhongKhamNhi/Views/HoaDonThuoc/EditCTHDT.cshtml
+++ b/WebPhongKhamNhi/Views/HoaDonThuoc/EditCTHDT.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "EditCTHDT";
 }
 
-<h1>EditCTHDT</h1>
+<h1>Chỉnh sửa hóa đơn thuốc</h1>
 
-<h4>Chitiethoadonthuoc</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -26,14 +26,14 @@
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Lưu" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Details" asp-route-id="@ViewBag.MaHoaDonThuoc">Quay lại chi tiết hóa đơn thuốc</a>
 </div>
 
 @section Scripts {
