--- a/WebPhongKhamNhi/Views/DichVuKham/Create.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuKham/Create.cshtml
@@ -7,9 +7,18 @@
 <h1>Thêm mới dịch vụ khám</h1>
 
 <hr />
+@if (ViewData["DichVuDuplicateName"] != null)
+{
+    <div class="alert alert-danger">
+        <p>@ViewData["DichVuDuplicateName"]</p>
+    </div>
+}
+
 <div class="row">
     <div class="col-md-4">
+
         <form asp-action="Create">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TenDichVu" class="control-label"></label>
