--- a/WebPhongKhamNhi/Views/NhaSanXuat/Create.cshtml
+++ b/WebPhongKhamNhi/Views/NhaSanXuat/Create.cshtml
@@ -15,7 +15,7 @@
             @if (ViewData["DupplicateNameErrorMessage"] != null)
             {
                 <div class="alert alert-danger">
-                    @ViewData["DupplicateNameErrorMessage"]
+                    <p>@ViewData["DupplicateNameErrorMessage"]</p>
                 </div>
             }
 
