--- a/WebPhongKhamNhi/Views/Shared/_UserLayout.cshtml
+++ b/WebPhongKhamNhi/Views/Shared/_UserLayout.cshtml
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>The Med-Expert a Medical Hospital Category Website Template | Home :: w3layouts</title>
+    <title>Phòng khám nhi</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='//fonts.googleapis.com/css?family=Ruluko' rel='stylesheet' type='text/css'>
@@ -49,16 +49,16 @@
         <div class="menu">
             <ul class="nav">
                 <li class="active">
-                    <a href="index.html" title="Home">Home</a>
+                    <a href="index.html" title="Home">Trang chủ</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="about.html">Về chúng tôi</a>
                 </li>
                 <li>
-                    <a href="service.html">Services</a>
+                    <a href="service.html">Dịch vụ</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a href="contact.html">Thông tin liên lạc</a>
                 </li>
                 <div class="clear"></div>
             </ul>
@@ -95,8 +95,8 @@
             <div class="footer1 footer-index">
                 <div class="copy">
                     <p class="w3-link">
-                        © Med Expert. All Rights Reserved | Design by&nbsp;
-                        <a href="http://w3layouts.com/"> W3layouts</a>
+                        Phòng khám nhi&nbsp;
+                        <a href="http://w3layouts.com/"> Nhóm 16</a>
                     </p>
                 </div>
                 <div class="clear"></div>
