--- a/WebPhongKhamNhi/Views/DichVuXetNghiem/Create.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuXetNghiem/Create.cshtml
@@ -6,8 +6,14 @@
 
 
 
-<h1>Tạo dịch vụ xét nghiệm</h1>
+<h1>Tạo dịch vụ xét nghiệm</h1> 
+
 <hr />
+@if (ViewData["Message"] != null)
+{
+    <div class="alert alert-danger">@ViewData["Message"]</div>
+} 
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
