--- a/WebPhongKhamNhi/Views/DichVuXetNghiem/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuXetNghiem/Delete.cshtml
@@ -7,23 +7,28 @@
 <h1>Xóa </h1>
 
 <h3>Bạn có muốn xóa không</h3>
-<div>
-   
+<div> 
+    <hr />
+    @if (ViewData["Message"] != null)
+    {
+        <div class="alert alert-danger">@ViewData["Message"]</div>
+    }
+
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             Tên xét nghiệm
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TenXetNghiem)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             Chi phí
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ChiPhi)
         </dd>
     </dl>
-    
+
     <form asp-action="DeletePost">
         <input type="hidden" asp-for="MaXetNghiem" />
         <input type="submit" value="Xóa" class="btn btn-danger" /> |
